Fixed text-align in style sheet

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 h1 {
 	color: blue;
-	test-align:left;
+	text-align:left;
 }
 h2 {
 	color: red;
